# Virtual-Soundboard

./: .gitignore  Cargo.toml  README.md  index.html  package-lock.json  package.json
docs/: audio-engine.md  backend-architecture.md  development-guide.md  frontend-architecture.md  global-hotkeys.md  mic-effects-and-dsp.md  persistence.md  system-overview.md  troubleshooting.md
src/: App.tsx  audio.rs  clip.rs  defaults.ts  main.rs  main.tsx  soundboardState.ts  styles.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: audio.rs  clip.rs  effects.rs  lib.rs  main.rs  soundboard.rs
src-tauri/src/effects/: mod.rs  simple.rs
src/components/: AudioClipManagerTab.tsx  ConfigTab.tsx  MainTab.tsx  SoundboardTab.tsx  Tabs.tsx
