[package]
name = "virtual_soundboard"
version = "0.1.0"
edition = "2024"

[lib]
name = "virtual_soundboard_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
cpal = "0.17.3"
hound = "3.5"
minimp3 = "0.5"
ringbuf = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-global-shortcut = "2"
